--- a/packaging/deb/control
+++ b/packaging/deb/control
@@ -1,4 +1,4 @@
-Package: electrontubes
+Package: lc-circuits
 Version: 0.4.1
 Section: electronics
 Priority: extra
@@ -6,6 +6,6 @@ Architecture: i386
 Installed-Size: 5.7 MB
 Maintainer: Pozsar Zsolt <pozsarzs@gmail.com>
 Depends: libc6, libglib2.0-0, libgtk2.0-0
-Description: Electrontube bias calculator
+Description: LC-circuit calculator
  Licenc: EUPL v1.1
 
